Added Print Hello World Button to GUI
Rather than having a window appear in order to run algorithms, best way is to integrate each algorithm into extension base gui as selectable options.

--- a/calcium_code/Resources/UI/calcium_code.ui
+++ b/calcium_code/Resources/UI/calcium_code.ui
@@ -175,6 +175,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QPushButton" name="helloButton">
+     <property name="text">
+      <string>Print Hello World</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="applyButton">
      <property name="enabled">
       <bool>false</bool>
